Thu Oct  3 18:01:44 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: define gc_profile_record::allocated_size if 
	  CALC_EXACT_MALLOC_SIZE is true.

Thu Oct  3 13:42:51 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (yes-test-sample): use RUNRUBY instead of MINIRUBY to set
	  runtime library path and run the built ruby.  [Bug #8971]

Thu Oct  3 00:17:15 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-additional.el: Properly quote the body.  An unquoted
	  body given to eval-after-load is evaluated immediately!

Wed Oct  2 21:38:30 2013  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/socket/ifaddr.c (rsock_getifaddrs): fix possible memory leak.
	  When a system had no interface, this function used xmalloc for root
	  but did not return any reference to it.  This patch fixes it by
	  immediately returning an empty array if no interface is found.
	  Coverity Scan found this bug.

Wed Oct  2 21:37:04 2013  Yusuke Endoh  <mame@tsg.ne.jp>

	* random.c (make_seed_value): a local array declaration was accessed
	  out of scope.  Coverity Scan found this bug.

Wed Oct  2 18:52:40 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: relax GC condition due to malloc_limit.

	* gc.c (GC_MALLOC_LIMIT_MAX): change default value
	  (256MB -> 512MB) and permit zero to ignore max value.

	* gc.c (vm_malloc_increase, vm_xrealloc): do not cause GC on realloc.

	* gc.c (gc_before_sweep): change debug messages.

Wed Oct  2 16:26:49 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_close_read): duplex IO should wait its child process
	  even after close_read.

Wed Oct  2 15:39:13 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* vm_core.h: use __has_attribute() instead of __clang__major__ because
	  clang says "Note that marketing version numbers should not be used
	  to check for language features, as different vendors use different
	  numbering schemes. Instead, use the Feature Checking Macros."
	  http://clang.llvm.org/docs/LanguageExtensions.html
